People directory style fixes on mobile

--- a/resources/css/wordpress.css
+++ b/resources/css/wordpress.css
@@ -1822,6 +1822,13 @@ ul.study-field li {
   @apply inline-block;
 }
 
+/*@screen lg {
+  ul.study-field li {
+    box-shadow: 0 0 0 3px rgba(49, 38, 29, 1), 8px 8px 0 0 rgba(49, 38, 29, 1);
+  }
+}*/
+
+
 ul.study-field li:not(:last-child) {
   @apply mr-8;
 }
@@ -2749,14 +2756,25 @@ figure.wp-block-pullquote {
   content: "";
 }
 
-.headshot {
-  height: 18rem;
+.break {
+  flex-basis: 100%;
+  height: 0;
 }
 
-.headshot::before {
-  content: '';
-  @apply absolute -top-3 -left-3 w-[90%] h-3/4 border-solid border-[3px] border-blue-light
+@screen lg {
+  .headshot {
+    height: 18rem;
+  }
+  .headshot::before {
+    content: '';
+    @apply absolute -top-3 -left-3 w-[90%] h-3/4 border-solid border-[3px] border-blue-light
+  }
+  .break {
+    flex-basis: inherit;
+    height: inherit;
+  }
 }
+
 
 /* Gutenberg Hub Block Patterns
 --------------------------------------------- */
